FIX - top menu alignement

--- a/app/assets/stylesheets/components/_dropdown_menu.scss
+++ b/app/assets/stylesheets/components/_dropdown_menu.scss
@@ -1,5 +1,5 @@
 .dropdown {
-  position: relative;
+  // position: relative;
   i {
     color: #fff;
   }
